# primes

./: ._test.py  .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  PRIME.json  README.md  WORKSPACE  cargo-bazel-lock.json  test.py  wercker.yml
data/: 000001.textpb  000002.textpb  000003.textpb  000004.textpb
src/: BUILD.bazel  verify.rs
src/proto/: BUILD.bazel  pratt.proto
