[package]
name = "primes"
version = "0.1.0"
edition = "2021"

[dependencies]
rug = "1.22"

# The following are essentially build dependencies.
# Currently listed as runtime deps due to Bazel toolchain setup issues.
#[build-dependencies]

prost = "0.12"
prost-types = "0.12"
protoc-gen-prost = "0.2"
protoc-gen-tonic = "0.3"
tonic = "0.10"
